@@ -1,20 +1,22 @@
-
-Executable jar Compare.jar is available in ./lib folder
-
 =================================================================================================
-Instructions to generate Compare.jar for comparing responses of requests from two different files:
+Instructions to generate Compare.jar for comparing responses of requests from two different files
 =================================================================================================
 
 Below command Generates executable jar in ./lib folder:
 
     $ mvn clean package
 
-Run the program with existing files in target/test-classes/gojek
+=================================================================================================
+Instructions to Execute compare.bat (WINDOWS)
+=================================================================================================
 
-    $ java -jar lib/Compare.jar target/test-classes/gojek/file1.txt target/test-classes/gojek/file2.txt
+    $ cd compare-response/execute
+    $ compare.bat file1.txt file2.txt
 
-If program is running in JDK9+ add the following option to the JVM to disable the warning from Spring's use of CGLIB
+=================================================================================================
+Instructions to Execute compare.sh (LINUX)
+=================================================================================================
 
-    $ java --add-opens java.base/java.lang=ALL-UNNAMED -jar lib/Compare.jar target/test-classes/gojek/file1.txt target/test-classes/gojek/file2.txt
-
-
+    $ cd compare-response/execute
+    $ chmod 777 compare.sh
+    $ ./compare.sh file1.txt file2.txt
